v1/tests/elab/ok/fun_type/synth_fun_type.pion
def Fun0 = fun() -> Int;
def Fun1 = fun(x: Int) -> Int;
def IdType = fun(A: Type) -> A -> A;
