v1/tests/elab/errors/fun_lit/unsolved_pat_type.pion
def error = fun(x) => x;
